# AI-Core-Notes

./: .clang-format  .editorconfig  .gitignore  README.md  pyproject.toml
ONNX/: prompt.md
learn_pytorch/hand_rolled_DL/class01_python_basic/: main.py  note.md
learn_pytorch/hand_rolled_DL/class02_perceptron/: main.py  note.md  test_main.py
learn_pytorch/hand_rolled_DL/class03_Neural_network/: main.py  note.md  test_main.py
learn_pytorch/hand_rolled_DL/class04_learning/: main1.py  main2.py  main3.py  note.md
learn_pytorch/hand_rolled_DL/class05_bp/: main.py  note.md  test_main.py
learn_pytorch/hand_rolled_DL/class06_tips/: main.py  note.md
learn_pytorch/hand_rolled_DL/class07_CNN/: main.py  note.md
learn_pytorch/hand_rolled_DL/class08_deep_learn/: note.md
math_theory/: prompt.md
math_theory/class01_diff/: main.cpp  note.md
math_theory/class02_integral/: main.cpp  note.md
math_theory/class03_cache_miss/: main.cpp  note.md
math_theory/class04_if_predict/: main.cpp  note.md
math_theory/class05_mult_core/: main.cpp  note.md
math_theory/class06_cholesky/: main.cpp  note.md
math_theory/class07_SVD/: main.cpp  note.md
math_theory/class08_gauss/: main.cpp  note.md
math_theory/class09_log/: main.cpp  note.md
math_theory/class10_LSM/: main.cpp  note.md
math_theory/class11_welford/: main.cpp  note.md
math_theory/class12_MLE/: main.cpp  note.md
math_theory/class13_kalman/: main.cpp  note.md
tiny_skills/APIuseLLM/: main.py
tiny_skills/DeepSeek_doc/: main.py  note.md
tiny_skills/Hand_rolled_OpenClaw/: Agent.md  Skill.md  main.py
(+31 files in other folders)
